<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:scaleType="centerCrop"
            />
        


       <Spinner
           android:id="@+id/searchOptions"
           android:layout_width="fill_parent"
           android:layout_height="40sp">
           wrap_content
           </Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="20dp"
            android:background="@drawable/whitealphabackground"
            android:gravity="center_vertical" >

            <com.javathlon.memsoft.FontelloTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/fontello_search"
                android:textColor="@color/material_blue_grey_800"
                android:textSize="18dp"
                tools:ignore="SpUsage" />

            <EditText
                android:id="@+id/searchKeyword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:hint="@string/podcastt_title_search"
                android:textColor="@color/material_blue_grey_800" />


            <com.javathlon.memsoft.FontelloTextView
                android:id="@+id/searchPodcastButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/material_search"
                android:textColor="@color/material_blue_grey_800"
                android:textSize="18dp"
                tools:ignore="SpUsage" />
        </LinearLayout>
    </RelativeLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:layout_width="fill_parent"
            android:id="@+id/editionList"
            android:layout_height="wrap_content"
            android:layout_weight="1"></ListView>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>
